agregando imágenes al sitio

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 	<header><!-- header -->
 		<figure><!-- logotipo -->
-			<img src="" alt="">
+			<img src="images/invie.png" width="186" height="60" alt="Logotipo Invie">
 		</figure>
 		<nav>
 			<ul>
@@ -27,9 +27,9 @@
 	</section>
 	<section><!-- guitarras -->
 		<h2>Nuestras guitarras</h2>
-		
+
 		<article><!-- guitarra 1 -->
-			<img src="" alt="">
+			<img src="images/invie-acustica.png" alt="Guitarra invie acústica" width="200">
 			<h3>Invie Acústica</h3>
 			<ol>
 				<li>Estilo vintage</li>
@@ -39,7 +39,7 @@
 		</article>
 		
 		<article><!-- guitarra 2 -->
-			<img src="" alt="">
+			<img src="images/invie-classic.png" alt="Guitarra invie classic" width="200">
 			<h3>Invie Classic</h3>
 			<ol>
 				<li>Estilo vintage</li>
