Agregando navegación interna

--- a/index.html
+++ b/index.html
@@ -5,27 +5,30 @@
 	<title>Invie - tus mejores guitarras</title>
 </head>
 <body>
-	<header><!-- header -->
+	<header id="header"><!-- header -->
 		<figure><!-- logotipo -->
 			<img src="images/invie.png" width="186" height="60" alt="Logotipo Invie">
 		</figure>
 		<nav>
 			<ul>
 				<li>
-					<a href="">Home</a>
+					<a href="index.html">Home</a>
 				</li>
 				<li>
-					<a href="">Precios</a>
+					<a href="#guitarras">Guitarras</a>
+				</li>
+				<li>
+					<a href="precios.html">Precios</a>
 				</li>
 			</ul>
 		</nav>
 	</header>
-	<section><!-- portada -->
+	<section id="portada"><!-- portada -->
 		<h1>Guitarras inviesibles</h1><!-- titulo -->
 		<h3>Sé la estrella de rock que siempre quisiste ser</h3><!-- resumen -->
 		<button>Conoce más</button><!-- boton -->
 	</section>
-	<section><!-- guitarras -->
+	<section id="guitarras"><!-- guitarras -->
 		<h2>Nuestras guitarras</h2>
 
 		<article><!-- guitarra 1 -->
