--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
+	<link rel="stylesheet" href="css/invie.css">
 	<title>Invie - tus mejores guitarras</title>
 </head>
 <body>
