--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 	<title>Invie - tus mejores guitarras</title>
 </head>
 <body>
-	<header id="header"><!-- header -->
-		<figure><!-- logotipo -->
+	<header id="header" class="header"><!-- header -->
+		<figure class="logotipo"><!-- logotipo -->
 			<img src="images/invie.png" width="186" height="60" alt="Logotipo Invie">
 		</figure>
-		<nav>
+		<nav class="menu">
 			<ul>
 				<li>
 					<a href="index.html">Home</a>
@@ -24,17 +24,17 @@
 			</ul>
 		</nav>
 	</header>
-	<section id="portada"><!-- portada -->
-		<h1>Guitarras inviesibles</h1><!-- titulo -->
-		<h3>Sé la estrella de rock que siempre quisiste ser</h3><!-- resumen -->
+	<section id="portada" class="portada"><!-- portada -->
+		<h1 class="titulo">Guitarras inviesibles</h1><!-- titulo -->
+		<h3 class="title-a">Sé la estrella de rock que siempre quisiste ser</h3><!-- resumen -->
 		<button>Conoce más</button><!-- boton -->
 	</section>
-	<section id="guitarras"><!-- guitarras -->
+	<section id="guitarras" class="guitarras"><!-- guitarras -->
 		<h2>Nuestras guitarras</h2>
 
-		<article><!-- guitarra 1 -->
+		<article class="guitarra"><!-- guitarra 1 -->
 			<img src="images/invie-acustica.png" alt="Guitarra invie acústica" width="200">
-			<h3>Invie Acústica</h3>
+			<h3 class="title-b">Invie Acústica</h3>
 			<ol>
 				<li>Estilo vintage</li>
 				<li>Madera pura</li>
@@ -42,9 +42,9 @@
 			</ol>
 		</article>
 		
-		<article><!-- guitarra 2 -->
+		<article class="guitarra"><!-- guitarra 2 -->
 			<img src="images/invie-classic.png" alt="Guitarra invie classic" width="200">
-			<h3>Invie Classic</h3>
+			<h3 class="title-b">Invie Classic</h3>
 			<ol>
 				<li>Estilo vintage</li>
 				<li>Liviana</li>
