--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 	<title>Invie - tus mejores guitarras</title>
 </head>
 <body>
-	<header id="header" class="header"><!-- header -->
+	<header id="header" class="header contenedor"><!-- header -->
 		<figure class="logotipo"><!-- logotipo -->
 			<img src="images/invie.png" width="186" height="60" alt="Logotipo Invie">
 		</figure>
-		<nav class="menu">
+		<nav class="menu"><!--menu-->
 			<ul>
 				<li>
 					<a href="index.html">Home</a>
@@ -26,11 +26,13 @@
 		</nav>
 	</header>
 	<section id="portada" class="portada"><!-- portada -->
-		<h1 class="titulo">Guitarras inviesibles</h1><!-- titulo -->
-		<h3 class="title-a">Sé la estrella de rock que siempre quisiste ser</h3><!-- resumen -->
-		<button>Conoce más</button><!-- boton -->
+		<div class="contenedor">
+			<h1 class="titulo">Guitarras inviesibles</h1><!-- titulo -->
+			<h3 class="title-a">Sé la estrella de rock que siempre quisiste ser</h3><!-- resumen -->
+			<button>Conoce más</button><!-- boton -->
+		</div>
 	</section>
-	<section id="guitarras" class="guitarras"><!-- guitarras -->
+	<section id="guitarras" class="guitarras contenedor"><!-- guitarras -->
 		<h2>Nuestras guitarras</h2>
 
 		<article class="guitarra"><!-- guitarra 1 -->
