--- a/index.html
+++ b/index.html
@@ -36,23 +36,27 @@
 		<h2>Nuestras guitarras</h2>
 
 		<article class="guitarra"><!-- guitarra 1 -->
-			<img src="images/invie-acustica.png" alt="Guitarra invie acústica" width="200">
-			<h3 class="title-b">Invie Acústica</h3>
-			<ol>
-				<li>Estilo vintage</li>
-				<li>Madera pura</li>
-				<li>Incluye estuche invisible de aluminio</li>
-			</ol>
+			<img class=" derecha" src="images/invie-acustica.png" alt="Guitarra invie acústica" width="350">
+			<div class="contenedor-guitarra-a">
+				<h3 class="title-b">Invie Acústica</h3>
+				<ol>
+					<li>Estilo vintage</li>
+					<li>Madera pura</li>
+					<li>Incluye estuche invisible de aluminio</li>
+				</ol>
+			</div>
 		</article>
 		
 		<article class="guitarra"><!-- guitarra 2 -->
-			<img src="images/invie-classic.png" alt="Guitarra invie classic" width="200">
-			<h3 class="title-b">Invie Classic</h3>
-			<ol>
-				<li>Estilo vintage</li>
-				<li>Liviana</li>
-				<li>Inicia tu camino como rockstar</li>
-			</ol>
+			<img class=" izquierda" src="images/invie-classic.png" alt="Guitarra invie classic" width="350">
+			<div class="contenedor-guitarra-b">
+				<h3 class="title-b">Invie Classic</h3>
+				<ol>
+					<li>Estilo vintage</li>
+					<li>Liviana</li>
+					<li>Inicia tu camino como rockstar</li>
+				</ol>
+			</div>
 		</article>
 	</section>
 </body>
