--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
 	</section>
 	<section id="guitarras" class="guitarras contenedor"><!-- guitarras -->
 		<h2>Nuestras guitarras</h2>
-
 		<article class="guitarra"><!-- guitarra 1 -->
 			<img class=" derecha" src="images/invie-acustica.png" alt="Guitarra invie acústica" width="350">
 			<div class="contenedor-guitarra-a">
@@ -59,5 +58,17 @@
 			</div>
 		</article>
 	</section>
+	<footer class="footer">
+		<div class="contenedor">
+			<div class="contacto">
+				<img src="images/invie-white.png" alt="logotipo blanco">
+				<a href="tel:+34646378234"><strong>Teléfono</strong><span>666 444 333</span></a>
+				<a href="mailto:carlos@voodooroom.net"><strong>Email</strong>carlos@voodooroom.net</a>
+			</div>
+			<div class="formulario">
+				formulario
+			</div>
+		</div>
+	</footer>
 </body>
 </html>
