--- a/index.html
+++ b/index.html
@@ -7,29 +7,29 @@
 	<title>Invie - tus mejores guitarras</title>
 </head>
 <body>
-	<header id="header" class="header contenedor"><!-- header -->
-		<figure class="logotipo"><!-- logotipo -->
-			<img src="images/invie.png" width="186" height="60" alt="Logotipo Invie">
-		</figure>
-		<nav class="menu"><!--menu-->
-			<ul>
-				<li>
-					<a href="index.html"> Home</a>
-				</li>
-				<li>
-					<a href="#guitarras"> Guitarras</a>
-				</li>
-				<li>
-					<a href="precios.html"> Precios</a>
-				</li>
-			</ul>
-		</nav>
-	</header>
-	<section id="portada" class="portada"><!-- portada -->
+	<section id="portada" class="portada background"><!-- portada -->
+		<header id="header" class="header contenedor"><!-- header -->
+			<figure class="logotipo"><!-- logotipo -->
+				<img src="images/invie.png" width="186" height="60" alt="Logotipo Invie">
+			</figure>
+			<nav class="menu"><!--menu-->
+				<ul>
+					<li>
+						<a href="index.html"> Home</a>
+					</li>
+					<li>
+						<a href="#guitarras"> Guitarras</a>
+					</li>
+					<li>
+						<a href="precios.html"> Precios</a>
+					</li>
+				</ul>
+			</nav>
+		</header>
 		<div class="contenedor">
-			<h1 class="titulo">Guitarras inviesibles</h1><!-- titulo -->
+			<h1 class="titulo">Guitarras <span>invie</span>sibles</h1><!-- titulo -->
 			<h3 class="title-a">Sé la estrella de rock que siempre quisiste ser</h3><!-- resumen -->
-			<button class="button">Conoce más</button><!-- boton -->
+			<a class="button" href="#guitarras">Conoce más</a><!-- boton -->
 		</div>
 	</section>
 	<section id="guitarras" class="guitarras contenedor"><!-- guitarras -->
@@ -46,7 +46,7 @@
 			</div>
 		</article>
 		
-		<article class="guitarra"><!-- guitarra 2 -->
+		<article class="guitarra b"><!-- guitarra 2 -->
 			<img class=" izquierda" src="images/invie-classic.png" alt="Guitarra invie classic" width="350">
 			<div class="contenedor-guitarra-b">
 				<h3 class="title-b">Invie Classic</h3>
