--- a/precios.html
+++ b/precios.html
@@ -7,7 +7,8 @@
 	<title>Invie - Precios de tus mejores guitarras</title>
 </head>
 <body>
-	<header id="header" class="header contenedor"><!-- header -->
+	<header id="header" class="header background"><!-- header -->
+	<div class="contenedor">
 		<figure class="logotipo"><!-- logotipo -->
 			<img src="images/invie.png" width="186" height="60" alt="Logotipo Invie">
 		</figure>
@@ -24,6 +25,7 @@
 				</li>
 			</ul>
 		</nav>
+	</div>
 	</header>
 	<section class="tabla">
 		<div class="contenedor">
