Agregando videos de manera responsive

--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
 	</section>
 	<section id="guitarras" class="guitarras contenedor"><!-- guitarras -->
 		<h2>Nuestras guitarras</h2>
+		<div class="video-responsive-contenedor">
+			<iframe class="video-responsive-src" width="560" height="315" src="https://www.youtube.com/embed/R1dW8M4EqYY" frameborder="0" allowfullscreen></iframe>
+		</div>
+		<video src="video/320x240.ogg"></video>
 		<article class="guitarra"><!-- guitarra 1 -->
 			<img class=" derecha" data-src="images/invie-acustica.png" alt="Guitarra invie acústica" width="350">
 			<div class="contenedor-guitarra-a">
