Añadidas imagenes responsive y creada tabla responsive

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<section id="portada" class="portada background"><!-- portada -->
 		<header id="header" class="header contenedor"><!-- header -->
 			<figure class="logotipo"><!-- logotipo -->
-				<img src="images/invie.png" width="186" height="60" alt="Logotipo Invie">
+				<img src="images/invie.png" srcset="images/invie.png 1x, images/invie2x.png 2x" width="186" height="60" alt="Logotipo Invie">
 			</figure>
 			<span class="burguer-button icon-menu" id="burguer-button"></span>
 			<nav class="menu" id="menu"><!--menu-->
@@ -41,7 +41,7 @@
 		</div>
 		<video src="video/320x240.ogg"></video>
 		<article class="guitarra"><!-- guitarra 1 -->
-			<img class=" derecha" data-src="images/invie-acustica.png" alt="Guitarra invie acústica" width="350">
+			<img class=" derecha" data-src="images/invie-acustica.png|images/invie-acustica2x.png" alt="Guitarra invie acústica" width="350">
 			<div class="contenedor-guitarra-a">
 				<h3 class="title-b">Invie Acústica</h3>
 				<ol>
@@ -53,7 +53,7 @@
 		</article>
 
 		<article class="guitarra b"><!-- guitarra 2 -->
-			<img class=" izquierda" data-src="images/invie-classic.png" alt="Guitarra invie classic" width="350">
+			<img class=" izquierda" data-src="images/invie-classic.png|images/invie-classic2x.png" alt="Guitarra invie classic" width="350">
 			<div class="contenedor-guitarra-b">
 				<h3 class="title-b">Invie Classic</h3>
 				<ol>
@@ -67,7 +67,7 @@
 	<footer class="footer">
 		<div class="contenedor">
 			<div class="contacto">
-				<img data-src="images/invie-white.png" alt="logotipo blanco">
+				<img data-src="images/invie-white.png|images/invie-white2x.png" alt="logotipo blanco">
 				<a href="tel:+34646378234"><strong>Teléfono</strong><span>666 444 333</span></a>
 				<a href="mailto:carlos@voodooroom.net"><strong>Email</strong>yo@gmail.com</a>
 			</div>
