Ultimos retoques: Video, boton burguer, menu

--- a/precios.html
+++ b/precios.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<title>Invie - Precios de tus mejores guitarras</title>
 </head>
-<body>
+<body class="precios">
 	<header id="header" class="header background"><!-- header -->
 	<div class="contenedor">
 		<figure class="logotipo"><!-- logotipo -->
