--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<link rel="stylesheet" href="css/invie.css">
-	<link href='https://fonts.googleapis.com/css?family=Montserrat:400,700|Allerta' rel='stylesheet' type='text/css'>
+	<!--<link href='https://fonts.googleapis.com/css?family=Montserrat:400,700|Allerta' rel='stylesheet' type='text/css'>-->
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<!-- Nuestro indie.css carga al final de la página. Aquí utilizamos un resumen del css con los estilos básicos para mejorar la carga-->
+	<style>
+			@font-face{font-family:'icomoon';src:url(./fonts/icomoon.eot?grrmr4);src:url(./fonts/icomoon.eot?grrmr4#iefix) format("embedded-opentype"),url(./fonts/icomoon.ttf?grrmr4) format("truetype"),url(./fonts/icomoon.woff?grrmr4) format("woff"),url(./fonts/icomoon.svg?grrmr4#icomoon) format("svg");font-weight:400;font-style:normal}[class*=" icon-"]{font-family:'icomoon'!important;speak:none;font-style:normal;font-weight:400;font-variant:normal;text-transform:none;line-height:1;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale}.icon-menu:before{content:"\e9bd"}body{font-family:'allerta',sans-serif;margin:0}.background{background-color:#466173;background-image:url(./images/background.png);background-size:cover}.burguer-button{color:#fff;width:40px;border-radius:50%;line-height:40px;height:40px;background:#395667;display:inline-block;text-align:center;position:absolute;left:20px;top:20px;z-index:3;display:none;position:fixed}.button{border-radius:12px;border:none;background:#fd324e;color:#fff;font-size:18px;padding:7px 12px;background:linear-gradient(to left,#fe344e,#ff7250);text-decoration:none}.contenedor{max-width:800px;margin:0 auto;position:relative}.guitarras{color:#1f313c;margin-bottom:60px!important}.guitarras h2{font-size:35px;font-family:'montserrat',sans-serif}.header{position:relative}.logotipo{display:inline-block;margin-left:0}.menu{font-size:24px;display:inline-block;position:absolute;right:0}.menu a{color:#fff;text-decoration:none}.menu li{display:inline-block;margin-left:30px}.menu li:before{font-size:50px;line-height:20px;content:'∘';color:#fff}.portada{color:#fff;padding:20px;height:500px}.titulo{font-size:70px;font-family:'montserrat',sans-serif;margin-bottom:0;margin-top:70px}.titulo span{text-decoration:underline}.title-a{font-size:24px;margin-top:0}.video-responsive-contenedor{position:relative;padding-top:56.25%}.video-responsive-src{position:absolute;left:0;right:0;top:0;bottom:0;width:100%;height:100%}@media screen and(-webkit-min-device-pixel-ratio: 2){.background{background-image:url(./images/background2x.png);background-size:cover}}@media screen and (max-width: 800px){.portada{height:auto}.portada .button{display:inline-block;margin-bottom:30px}.titulo{font-size:45px;margin-top:30px}.title-a{font-size:18px}.guitarras{text-align:center}}@media screen and (max-width: 650px){.header{text-align:center}.logotipo{margin:0}.menu{position:static;display:block}.menu li:first-child{margin:0}.menu ul{padding:0}}@media screen and (max-width: 500px){.portada .button{display:block}.burguer-button{display:block}.portada .contenedor{position:static}.header{position:static}.menu{background:rgba(255,60,88,0.8);position:fixed;left:-100%;top:0;bottom:0;right:0;z-index:2;display:flex;align-items:center;width:100%}.menu ul{flex:1}.menu li{display:block;margin:0;padding:8px 0;border-bottom:1px solid #fff}.menu li::before{display:none}.menu li:first-child{border-top:1px solid #fff}.portada{text-align:center}.titulo{font-size:30px}.title-a{font-size:16px}}
+	</style>
 	<title>Invie - tus mejores guitarras</title>
 </head>
 <body>
@@ -112,7 +115,19 @@
 			</form>
 		</div>
 	</footer>
-
+<!-- fuentes de google a traves de javascrip para mejorar la optimización de la carga-->
+<script type="text/javascript">
+  WebFontConfig = {
+    google: { families: [ 'Montserrat:400,700:latin', 'Allerta::latin' ] }
+  };
+  (function() {
+    var wf = document.createElement('script');
+    wf.src = 'https://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js';
+    wf.type = 'text/javascript';
+    wf.async = 'true';
+    var s = document.getElementsByTagName('script')[0];
+    s.parentNode.insertBefore(wf, s);
+  })(); </script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/blazy/1.6.2/blazy.min.js">
 	//lamamos a la libreria be lazy
 </script>
@@ -154,5 +169,6 @@
     selector: 'img'
 });
 </script>
+<link rel="stylesheet" href="css/invie.css">
 </body>
 </html>
