CSS optimizado y creado invie.min.css

--- a/index.html
+++ b/index.html
@@ -169,6 +169,6 @@
     selector: 'img'
 });
 </script>
-<link rel="stylesheet" href="css/invie.css">
+<link rel="stylesheet" href="css/invie.min.css">
 </body>
 </html>
